# mkl_perfm_test

./: CMakeLists.txt  main.f90  utils.f90
BLAS1/: axpy.f90
Gather/: gather.f90  m_gather.f90
mkl_libs/: CMakeLists.txt
